k8s/backend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: dms-backend-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/subnets: subnet-078618558d0196f3d,subnet-0400d37cd1eecd06c

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dms-backend-service
                port:
                  number: 5000
